initial work in progress for removing the TinyXML library dependency converted MapSettings, GameOption, and TdbFile to use JAXB for parsing and binding the XML files to objects added tests for each conversion to ensure the XML parsing is complete and accurate